# flask-redisboard

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  config.py  package-lock.json  package.json  pyproject.toml  setup.py  utils.py  webpack.config.js
example/: example.py
flask_redisboard/: __init__.py  __main__.py  constant.py  example.py  redisboard.py  utils.py
flask_redisboard/src/css/: components.css  index.js  lib.js  style.css  style.js
flask_redisboard/src/js/: common.js  index.js  scripts.js  stisla.js
flask_redisboard/src/js/pages/: config.js  dashboard.js  database.js  keydetail.js  keydetail_hash.js  keydetail_list.js  keydetail_set.js  keydetail_zset.js  serverinfo.js
flask_redisboard/static/css/: style.css
flask_redisboard/static/js/: common.js  custom.js  dashboard.js  database.js  keydetail.js  scripts.js
flask_redisboard/static/js/pages/: command.js  config.js  keydetail.js  keydetail_list.js  keydetail_set.js  keydetail_zset.js
flask_redisboard/templates/: layout.html
flask_redisboard/templates/keydetail/: base.html  hash.html  list.html  zset.html
flask_redisboard/templates/redisboard/: command.html  config.html  dashboard.html  database.html  layout.html  macros.html  serverinfo.html
static/css/: style.css
static/js/: custom.js  keydetail.js
templates/: basetable.html  database.html  db.html  info.html  key.html  keydetail.html  layout.html  redis.html  serverinfo.html
templates/keydetail/: base.html  hash.html  list.html  set.html  zset.html
tests/: conftest.py  test_config.py  test_views.py
(+7 files in other folders)
