[tool.poetry]
name = "flask-redisboard"
version = "0.1.0"
description = ""
authors = ["hjlarry <hjlarry@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
redis = "^3.2"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.7",allows-prereleases = true}
black = {version = "^18.3-alpha.0",allows-prereleases = true}
wheel = "^0.33.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
